parse Clause (in progress)

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Resolution Editor</title>
   </head>
   <body>
-    <h1>Resolution Editor</h1>
+    <h1 class="text-center">Resolution Editor</h1>
     <div id="root" style="margin:20px;"></div>
     <!--
       This HTML file is a template.
