Added Help component

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <style>
+    .btn-group-xs > .btn, .btn-xs {
+      padding: .25rem .47rem;
+      font-size: .875rem;
+      line-height: 1;
+      border-radius: .2rem;
+    }
+    .fs-sm {
+      font-size: .875rem;
+    }
+  </style>
   <title>Resolution Editor</title>
 </head>
 
