--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <style>
-    .btn-group-xs > .btn, .btn-xs {
-      padding: .25rem .47rem;
-      font-size: .875rem;
-      line-height: 1;
-      border-radius: .2rem;
+    .step label {
+      display: none;
+    }
+    .step:focus-within label {
+      display: inline-block;
     }
     .fs-sm {
       font-size: .875rem;
